k8Services/ingressService.yaml
#The above secret is only required if we are supporting HTTPS requests.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - https-example.foo.com
      secretName: testsecret-tls
  rules:
    - host: https-example.foo.com
      http:
        paths:
          - path: /
            l.: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 80
